--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Selamat pagi, dunia</h1>
+<p>Saya tengah mempersiapkan situs ini untuk menyimpan alat-alat.</p>
 </body>
 </html>
